feat: add Forgot Password API and UI Page
